--- a/03-ecmascript-for-react/package.json
+++ b/03-ecmascript-for-react/package.json
@@ -6,5 +6,8 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "pnpm dlx live-server --host=localhost --port=3000 --no-browser --mount=/:./public"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.2"
   }
 }
