--- a/16-effect-sync-external-system/package.json
+++ b/16-effect-sync-external-system/package.json
@@ -11,9 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.4",
+    "immer": "^10.1.1",
     "motion": "10.18.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "use-immer": "^0.10.0"
   },
   "devDependencies": {
     "@eslint/js": "9.8.0",
